# 4-AbstractListModel

./: README.adoc
AbstractListModel/: CMakeLists.txt
AbstractListModel/main/: CMakeLists.txt
AbstractListModel/main/inc/: person.hpp  personmodel.hpp
AbstractListModel/main/qml/: InputDialog.qml  Main.qml
AbstractListModel/main/src/: main.cpp  personmodel.cpp
